syntax = "proto3";

option go_package = "./v1";
import "google/protobuf/timestamp.proto";

service User {
  rpc CreateUser (UserRequest) returns (UserResponse) {}
  rpc FindUser   (Empty)       returns (UserResponse) {}
  rpc FindUserByData (Empty)       returns (DetailedUserResponse) {}
  rpc UpdateUser (UserRequest) returns (UserResponse) {}
  rpc DeleteUser (Empty) returns (MessageResponse) {}
}

message Empty {}

message UserRequest {
  string name = 1;
  string email = 2;
  string masterPassword = 3;
}

message UserResponse {
  string name = 1;
  string email = 2;
}

message DetailedUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string masterPassword = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
  google.protobuf.Timestamp deletedAt = 7;
}

message MessageResponse {
  string message = 1;
}